# meddxagent

./: .gitignore  README.md  pyproject.toml
configs/: bench.yml
configs/ddx_drivers/: fixed_choice.yml  open_choice.yml
configs/diagnosis_agents/: single_llm_cot.yml  single_llm_standard.yml
configs/history_taking_agents/: llm_history_taking.yml
configs/patient_agents/: llm_patient.yml
configs/rag_agents/: medrag.yml  searchrag.yml
ddxdriver/: logger.py  run_ddxdriver.py  utils.py
ddxdriver/benchmarks/: __init__.py  _fewshot_utils.py  _knn_search.py  base.py  data_processing.py  ddxplus.py  icraftmd.py  metrics.py  rarebench.py
ddxdriver/benchmarks/data/icraftmd/: diagnosis_options.txt  disease_mapping.json  (+1 more)
ddxdriver/ddxdrivers/: __init__.py  base.py  fixed_choice.py  open_choice.py  utils.py
ddxdriver/diagnosis_agents/: __init__.py  base.py  single_llm_base.py  single_llm_cot.py  single_llm_standard.py  utils.py
ddxdriver/history_taking_agents/: __init__.py  base.py  llm_history_taking.py  utils.py
ddxdriver/models/: __init__.py  base.py  llama31_8b.py  llama3_instruct.py  llama3_ultramedical.py  oai_azure_chat.py  oai_chat.py  utils.py
ddxdriver/patient_agents/: __init__.py  base.py  llm_patient.py  utils.py
ddxdriver/rag_agents/: __init__.py  _medrag_utils.py  _searchrag_utils.py  base.py  medrag.py  searchrag_base.py  searchrag_standard.py  utils.py
examples/: configs.json  results.json
scripts/: experiment.py  run.sh  run_diagnosis_agent.sh  run_history_taking_simulator.sh  run_iterative.sh  run_retrieval_agent.sh
(+6 files in other folders)
